--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.4",
     "node-input-validator": "^4.5.0",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.20",
     "passport": "^0.5.2",
     "passport-local-mongoose": "^6.1.0",
     "random-token": "^0.0.8",
